[package]
name = "rusty-dusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
aws-config = "0.12.0"
aws-sdk-dynamodb = "0.12.0"
aws-sdk-s3 = "0.12.0"
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
regex = "1.5.6"

[dependencies.redis]
version = "*"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
]